--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Migrations\201911171224432_Initial.Designer.cs">
       <DependentUpon>201911171224432_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911201526165_AddBasket.cs" />
+    <Compile Include="Migrations\201911201526165_AddBasket.Designer.cs">
+      <DependentUpon>201911201526165_AddBasket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -74,6 +78,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201911171224432_Initial.resx">
       <DependentUpon>201911171224432_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911201526165_AddBasket.resx">
+      <DependentUpon>201911201526165_AddBasket.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
