--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -59,6 +59,10 @@
     <Compile Include="Migrations\201911201526165_AddBasket.Designer.cs">
       <DependentUpon>201911201526165_AddBasket.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911240931217_AddCustomer.cs" />
+    <Compile Include="Migrations\201911240931217_AddCustomer.Designer.cs">
+      <DependentUpon>201911240931217_AddCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -81,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911201526165_AddBasket.resx">
       <DependentUpon>201911201526165_AddBasket.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911240931217_AddCustomer.resx">
+      <DependentUpon>201911240931217_AddCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
